DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Amount_Received_from_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_from_Tenant__c</fullName>
    <label>Amount Received from Tenant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>