DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Calculated_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Deal_Amount__c</fullName>
    <label>Calculated Deal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>