DeveloperOrg/force-app/main/default/objects/Opportunity/fields/custom_Amount__c.field-meta.xml
<CustomField>
    <fullName>custom_Amount__c</fullName>
    <label>custom Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>