DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Decision_Makers_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Makers uploaded</label>
    <type>Checkbox</type>
</CustomField>