DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Equipment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Quantity__c</fullName>
    <label>Equipment Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>