DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Lease_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lease_Duration__c</fullName>
    <label>Lease Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>