DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Needs_Analysis_uploded__c.field-meta.xml
<CustomField>
    <fullName>Needs_Analysis_uploded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Analysis uploded</label>
    <type>Checkbox</type>
</CustomField>