DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Negotiation_Review_upload__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Review_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation/Review upload</label>
    <type>Checkbox</type>
</CustomField>