DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Payment_Received_From__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_From__c</fullName>
    <label>Payment Received From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>