DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Perception_Analysis_upload__c.field-meta.xml
<CustomField>
    <fullName>Perception_Analysis_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perception Analysis upload</label>
    <type>Checkbox</type>
</CustomField>