DeveloperOrg/force-app/main/default/objects/Opportunity/fields/picklist_for_approval__c.field-meta.xml
<CustomField>
    <fullName>picklist_for_approval__c</fullName>
    <label>picklist for approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>