DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Proposal_Price_Quote_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Price_Quote_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal/Price Quote uploaded</label>
    <type>Checkbox</type>
</CustomField>