DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Prospect_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Prospect_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect uploaded</label>
    <type>Checkbox</type>
</CustomField>