DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Qualification_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Qualification_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualification uploaded</label>
    <type>Checkbox</type>
</CustomField>