DeveloperOrg/force-app/main/default/objects/Opportunity/fields/Value_Proposition_upload__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Proposition upload</label>
    <type>Checkbox</type>
</CustomField>