DeveloperOrg/force-app/main/default/objects/Opportunity/validationRules/Calculated_Deal_Amount_must_not_be_edita.validationRule-meta.xml
<ValidationRule>
    <fullName>Calculated_Deal_Amount_must_not_be_edita</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Calculated_Deal_Amount__c),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Calculated Deal Amount must not be editable</errorMessage>
</ValidationRule>