DeveloperOrg/force-app/main/default/objects/Opportunity/validationRules/close_Date_must_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>close_Date_must_be_in_future</fullName>
    <active>false</active>
    <errorConditionFormula>CloseDate &lt; Today()</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>close_Date_must_be_in_future</errorMessage>
</ValidationRule>