DeveloperOrg/force-app/main/default/objects/Opportunity/validationRules/Lease_Duration_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Duration_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Deal_Type__c ,&quot;Lease&quot;),ISBLANK( Lease_Duration__c ) )</errorConditionFormula>
    <errorMessage>Lease Duration required when Deal Type  equal Lease</errorMessage>
</ValidationRule>