DeveloperOrg/force-app/main/default/objects/Opportunity/validationRules/not_change.validationRule-meta.xml
<ValidationRule>
    <fullName>not_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( StageName , &quot;Negotiation/Review&quot;), 
 ISPICKVAL( PRIORVALUE( StageName) ,&quot;Prospecting&quot;) 
 )</errorConditionFormula>
    <errorMessage>TOP TO FELID</errorMessage>
</ValidationRule>