DeveloperOrg/force-app/main/default/objects/Opportunity/validationRules/opp_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>opp_amount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISBLANK(Amount)
)</errorConditionFormula>
    <errorMessage>📢 You must enter an Amount before marking this Opportunity as Closed Won.</errorMessage>
</ValidationRule>