DeveloperOrg/force-app/main/default/objects/Opportunity/listViews/Amount_grater_than100000.listView-meta.xml
<ListView>
    <fullName>Amount_grater_than100000</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>greaterOrEqual</operation>
        <value>100000</value>
    </filters>
    <label>Amount grater than100000</label>
</ListView>