DeveloperOrg/force-app/main/default/objects/Opportunity/listViews/Amount_Less_tThan_1000.listView-meta.xml
<ListView>
    <fullName>Amount_Less_tThan_1000</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>lessOrEqual</operation>
        <value>1000</value>
    </filters>
    <label>Amount Less tThan 1000</label>
</ListView>